--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <div class="item text1">
                 <h3>کل رقبہ منتقلہ
                 </h3>
-                <p>0-2-68 
-                </p> دو مرلہ اڑسٹھ فٹ
+                <p>دو مرلہ اڑسٹھ فٹ 0-2-68 
+                </p> 
             </div>
             <div class="item text2"><h3>تریخ فیصلہ
 
