--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="item text1">
                 <h3>کل رقبہ منتقلہ
                 </h3>
-                <p>دو مرلہ اڑسٹھ فٹ 0-2-68 
+                <p>0-2-68 دو مرلہ اڑسٹھ فٹ 
                 </p> 
             </div>
             <div class="item text2"><h3>تریخ فیصلہ
